--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -16,7 +16,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -281,7 +281,7 @@
                 }
             ],
             "source": [
-                "# - Importación de librerías:\n",
+                "# - Importación De Librerías:\n",
                 "\n",
                 "import pandas as pd\n",
                 "import numpy as np\n",
@@ -295,7 +295,7 @@
                 "from pickle import dump\n",
                 "import os\n",
                 "\n",
-                "# - Importación del set de datos:\n",
+                "# - Importación Del Dataset:\n",
                 "\n",
                 "url = 'https://raw.githubusercontent.com/4GeeksAcademy/k-nearest-neighbors-project-tutorial/refs/heads/main/winequality-red.csv'\n",
                 "\n",
@@ -309,7 +309,7 @@
                 "df.to_csv(rutg, index=False)\n",
                 "print(\"El archivo fue guardado en la ruta:\", rutg)\n",
                 "\n",
-                "# - Vista previa:\n",
+                "# - Vista Previa:\n",
                 "\n",
                 "df"
             ]
